# proekt_pks_elevator

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md
include/: Building.h  ConsoleLog.h  Elevator.h  ElevatorController.h  IObserver.h  Request.h  Simulation.h  UserInterface.h
scenarios/: CMakeLists.txt  scenario_building.cpp  scenario_request.cpp  scenario_simulation_lifecycle.cpp  scenario_strategy.cpp
src/: Building.cpp  Elevator.cpp  ElevatorController.cpp  Request.cpp  Simulation.cpp  UserInterface.cpp  main.cpp
tests/: CMakeLists.txt  test_building.cpp  test_elevator.cpp  test_request.cpp  test_simulation.cpp  test_singleton.cpp  test_strategy.cpp  Тестовые_сценарии.txt
